<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bikans</string>
    <string name="settings">Settings</string>
    <string name="bible">Bible</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="books">Books</string>
    <string name="chapter">Chapter</string>
    <string name="old_statement">DIE OU TESTAMENT</string>
    <string name="new_statement">DIE NUWE TESTAMENT</string>
    <string name="chooser_title">Share bile kjv via</string>
    <string name="verses">Verses</string>
    <string name="search_hint">Search book&#8230;</string>
    <string name="reading">Reading</string>
    <string name="stay_awake">Stay awake</string>
    <string name="night_mode">Night mode</string>
    <string name="text_size">Text size</string>
    <string name="auto_scroll_speed">Auto scroll speed</string>
    <string name="auto_scroll_stoped">Auto scroll stoped</string>
    <string name="stop_auto_scroll">Stop auto scroll</string>
    <string name="previous_chapter">Previous chapter</string>
    <string name="next_chapter">Next chapter</string>
    <string name="close_tutorial">Close tutorial</string>
    <string name="change_text_size">Change text size</string>
    <string name="auto_scroll">Auto scroll</string>
    <string name="day_light_mode">Day light mode</string>
    <string name="change_orientation">Change screen orientation</string>
    <string name="prevent_screen_turn_off_on_reading">Prevent screen turn off during reading</string>
    <string name="chage_to_black_theme_on_reading">Set black theme during reading</string>
    <string name="font_type">Font type</string>
    <string name="share">Share this app</string>
    <string name="book_title">Book name</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="set_auto_scroll_speed">Set auto scroll speed</string>
    <string name="selected_verses_will_appear_here">Selected verses will apper here</string>

    <string name="add_note">Add note</string>
    <string name="set_color">Set color</string>
    <string name="action_save">Save</string>
    <string name="this_cannot_be_empty">This cannot be empty</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Discard changes?</string>

    <string name="delete_notes">Delete notes?</string>
    <string name="delete_note">Delete note?</string>
    <string name="delete">Delete</string>
    <string name="search_notes">Search notes</string>
    <string name="no_notes">No notes</string>

    <string name="delete_bookmarks">Delete bookmarks?</string>
    <string name="delete_bookmark">Delete bookmark?</string>

    <string name="remove_all_verse_highlights">Remove all verse highlights</string>
    <string name="clear_highlights">Clear highlights</string>
    <string name="daily_verses_pref">Get daily verses at specified time</string>
    <string name="daily_verses">Daily  verses</string>
    <string name="verse_notification_time">Daily verses notification time</string>
    <string name="verse_of_the_day">Verse of the day</string>
    <string name="search_results_for">Search results for </string>
    <string name="search_results">Search results</string>


    <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
    <string name="color_picker_default_title">Choose color</string>
    <!-- Content description for a color square. -->
    <string name="color_swatch_description" translatable="false">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <!-- Content description for a selected color square. -->
    <string name="color_swatch_description_selected" translatable="false">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> imechaguliwa</string>
    <string name="notes">Notes</string>
    <string name="multi_column_view">Multi column view</string>
    <string name="single_column_view">Single column view</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_verses">Share verses</string>
    <string name="search_bookmarks">Search bookmarks</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="unable_to_find_play_store">Unable to find play store</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="long_click_on_a_verse_to_add_new_bookmark">Long click on a verse to add new bookmark</string>
    <string name="verse_highlights_cleared">Verse highlights cleared</string>
    <string name="copy">Copy</string>
    <string name="bookmark">Bookmark</string>
    <string name="highlight">Highlight</string>
    <string name="share_verse">Share verse</string>
    <string name="remove_highlights">Remove highlight</string>
    <string name="search_verses">Search verse</string>
    <string name="all">All</string>
    <string name="tap_to_exit">Tap again to close app</string>
    <string name="share_verse_of_the_day">Share verse of the day</string>
    <string name="verse_search_hint">Search \u0022in the beginning\u0022</string>
    <string name="total">TOTAL</string>
    <string name="highlighted_verses">Highlighted verses</string>
    <string name="delete_verse_highlights">Delete highlighted verses</string>
    <string name="delete_verse_highlight">Delete highlighted verse</string>
    <string name="search_highlighted_verses">Search highlighted verse</string>
    <string name="no_highlighted_verses">No highlighted verses</string>
    <string name="long_click_on_a_verse_to_highlight">Long press a verse to highlight</string>
    <string name="version">Version</string>
    <string name="developed_by">Developed by Robert Londo</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="search_any_word">Search for any word</string>
    <string name="privacy_policy_link"><a href='https://tenzi-za-rohoni-34349.firebaseapp.com'>Privacy Policy</a></string>
    <string name="daily_verse">Daily verse</string>
    <string name="restart">Restart</string>
    <string name="update_downloaded">Update downloaded</string>
</resources>
