<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_menu_copy"
        android:title="@string/copy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_action_bookmark"
        android:title="@string/bookmark"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_highlight"
        android:icon="@drawable/ic_action_set_color_dark"
        android:title="@string/highlight"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share_verse"
        android:icon="@drawable/ic_action_share_verse_dark"
        android:title="@string/share_verse"
        app:showAsAction="always"/>

</menu>