<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChapterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/verses_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:titleTextColor="@android:color/white" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/verses_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true" />

        <LinearLayout
            android:id="@+id/chapter_tutorial_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82000000"
            android:elevation="8dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:onClick="closeTutorial"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    app:srcCompat="@drawable/ic_tutorial_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_tutorial"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/chapter_tutorial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/left_tutorial_img"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/ic_tutorial_verse_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previous_chapter"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="150dp"
                        app:srcCompat="@drawable/ic_tutorial_verse_center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stop_auto_scroll"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:srcCompat="@drawable/ic_tutorial_verse_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_chapter"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?mWindowBackground"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:dividerHorizontal" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:minHeight="?attr/actionBarSize"
            app:elevation="4dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <android.support.v7.widget.ActionMenuView
                    android:id="@+id/bottom_action_menu"
                    android:layout_width="300dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_margin="0dp"
                    android:padding="0dp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
